--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,10 @@
         <ion-icon [name]="p.icon" item-left></ion-icon>
         {{p.title}}
       </button>
+      <button color="primary-pale" menuClose ion-item (click)="openReserve()">
+          <ion-icon name="restaurant" item-left></ion-icon>
+          Reserve Table
+      </button>
     </ion-list>
   </ion-content>
 
